<resources>
    <string name="app_name">Foodge</string>
    <string name="foodgeTag">FOODGE</string>
    <string name="foodgeSharedPreferences">FOODGE_SP</string>
    <string name="userSharedPreference">USER_SP</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="exit">Exit</string>
    <string name="meals">Meals</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="extraIdCategory">EXTRA_ID_CATEGORY</string>
    <string name="extraStrCategory">EXTRA_STR_CATEGORY</string>
    <string name="categoryImage">Category Image</string>
    <string name="mealImage">Meal Image</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="ingredient">Ingredient</string>
    <string name="tag">Tag</string>
    <string name="search_by_name">Search by name…</string>
    <string name="sort_by">Sort By</string>
    <string name="name">Name</string>
    <string name="previous">Previous</string>
    <string name="one">1</string>
    <string name="next">Next</string>
    <string name="extraIdMeal">EXTRA_ID_MEAL</string>
    <string name="add_meal">Add Meal</string>
    <string name="personal">Personal</string>
    <string name="web">Web</string>
    <string name="date_of_prep">Date of Prep</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="extraPersonalMeal">EXTRA_PERSONAL_MEAL</string>
    <string name="search_by_category">Search by category…</string>
    <string name="search_by_ingredient">Search by ingredient…</string>
    <string name="personalMeals">Personal Meals</string>
    <string name="extraMeal">EXTRA_MEAL</string>
    <string name="meal_name">Meal Name</string>
    <string name="pick_date">Pick Date</string>
    <string name="meal_type_breakfast_lunch_dinner">Meal Type (Breakfast, Lunch, Dinner)</string>
    <string name="instructions">Instructions</string>
    <string name="recipe">Recipe</string>
    <string name="youtube_link">Youtube Link</string>
    <string name="main_ingredient">Main Ingredient</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="meal_image_path">Meal Image Path</string>
    <string name="search_by_tag">Search by tag…</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="logout">Logout</string>
</resources>