<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentMeals"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PersonalMealsActivity">

    <LinearLayout
        android:id="@+id/linearElements"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextSearchCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_by_category"
            android:padding="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="4dp" />

        <EditText
            android:id="@+id/editTextSearchIngredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_by_ingredient"
            android:padding="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="4dp" />

        <EditText
            android:id="@+id/editTextSearchName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_by_name"
            android:padding="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="4dp" />

        <RadioGroup
            android:id="@+id/radioGroupOrderOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioButtonAsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asc"
                android:checked="true"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"/>

            <RadioButton
                android:id="@+id/radioButtonDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"/>
        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMealList"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <LinearLayout
            android:id="@+id/linearPagination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/buttonPrevPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                android:enabled="false"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/textPageNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"/>

            <Button
                android:id="@+id/buttonNextPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:enabled="false"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

