<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemPersonalMeal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textViewMealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="4dp"/>

    <ImageView
        android:id="@+id/imageViewMealImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="4dp"
        android:contentDescription="@string/mealImage" />

    <Button
        android:id="@+id/buttonEditPersonalMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/edit" />
    <Button
        android:id="@+id/buttonDeletePersonalMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/delete" />
</LinearLayout>