<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentRemoteMeals"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RemoteMealsFragment">

    <LinearLayout
        android:id="@+id/linearElements"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonViewPersonalMeals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalMeals"
            android:layout_gravity="center"/>

        <GridLayout
            android:id="@+id/gridLayoutFilters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/textCategoryFilterLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_columnWeight="1"
                android:layout_rowWeight="3"/>

            <Spinner
                android:id="@+id/spinnerCategoryFilter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="2"
                android:layout_rowWeight="3">
            </Spinner>

            <TextView
                android:id="@+id/textAreaFilterLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_columnWeight="1"
                android:layout_rowWeight="3"/>

            <Spinner
                android:id="@+id/spinnerAreaFilter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="2"
                android:layout_rowWeight="3">
            </Spinner>

            <TextView
                android:id="@+id/textIngredientFilterLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredient"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_columnWeight="1"
                android:layout_rowWeight="3"/>

            <Spinner
                android:id="@+id/spinnerIngredientFilter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="2"
                android:layout_rowWeight="3">
            </Spinner>

        </GridLayout>

        <EditText
            android:id="@+id/editTextSearchTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_by_tag"
            android:layout_margin="4dp" />

        <EditText
            android:id="@+id/editTextSearchName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_by_name"
            android:layout_margin="4dp" />
        <LinearLayout
            android:id="@+id/linearSortOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/textSortLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by"
                android:textSize="14sp"
                android:layout_gravity="center"/>

            <RadioGroup
                android:id="@+id/radioGroupSortOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:checked="true"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"/>

                <RadioButton
                    android:id="@+id/radioButtonCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"/>

                <RadioButton
                    android:id="@+id/radioButtonArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"/>

            </RadioGroup>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMealList"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <LinearLayout
            android:id="@+id/linearPagination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="4dp">

            <Button
                android:id="@+id/buttonPrevPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                android:enabled="false"
                android:layout_margin="4dp"/>

            <TextView
                android:id="@+id/textPageNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"/>

            <Button
                android:id="@+id/buttonNextPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:enabled="false"
                android:layout_marginStart="4dp"/>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/progress_bar_loading" />
</RelativeLayout>

